[gd_scene load_steps=4 format=3 uid="uid://c2ipuimmmuwm8"]

[ext_resource type="Script" path="res://Scenes/UI/HUD/HUD_inventory.gd" id="1_0p170"]
[ext_resource type="Texture2D" uid="uid://bv82sshcqqtk2" path="res://Assets/UI/HUD/inventory.png" id="1_3wefq"]
[ext_resource type="PackedScene" uid="uid://cekq2o4an2al" path="res://Scenes/UI/HUD/inv_ui_slot.tscn" id="2_u32ql"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_0p170")

[node name="InvUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 181.0
offset_top = 266.0
offset_right = 425.0
offset_bottom = 324.0

[node name="MarginContainer" type="MarginContainer" parent="InvUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="NinePatchRect" type="NinePatchRect" parent="InvUI/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_3wefq")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="InvUI/MarginContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -16.0
offset_right = 106.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
columns = 6

[node name="InvUISlot" parent="InvUI/MarginContainer/NinePatchRect/GridContainer" instance=ExtResource("2_u32ql")]
layout_mode = 2

[node name="InvUISlot2" parent="InvUI/MarginContainer/NinePatchRect/GridContainer" instance=ExtResource("2_u32ql")]
layout_mode = 2

[node name="InvUISlot3" parent="InvUI/MarginContainer/NinePatchRect/GridContainer" instance=ExtResource("2_u32ql")]
layout_mode = 2

[node name="InvUISlot4" parent="InvUI/MarginContainer/NinePatchRect/GridContainer" instance=ExtResource("2_u32ql")]
layout_mode = 2

[node name="InvUISlot5" parent="InvUI/MarginContainer/NinePatchRect/GridContainer" instance=ExtResource("2_u32ql")]
layout_mode = 2

[node name="InvUISlot6" parent="InvUI/MarginContainer/NinePatchRect/GridContainer" instance=ExtResource("2_u32ql")]
layout_mode = 2

[connection signal="pressed" from="InvUI/MarginContainer/NinePatchRect/GridContainer/InvUISlot" to="." method="_on_inv_ui_slot_pressed"]
[connection signal="pressed" from="InvUI/MarginContainer/NinePatchRect/GridContainer/InvUISlot2" to="." method="_on_inv_ui_slot_2_pressed"]
[connection signal="pressed" from="InvUI/MarginContainer/NinePatchRect/GridContainer/InvUISlot3" to="." method="_on_inv_ui_slot_3_pressed"]
[connection signal="pressed" from="InvUI/MarginContainer/NinePatchRect/GridContainer/InvUISlot4" to="." method="_on_inv_ui_slot_4_pressed"]
[connection signal="pressed" from="InvUI/MarginContainer/NinePatchRect/GridContainer/InvUISlot5" to="." method="_on_inv_ui_slot_5_pressed"]
[connection signal="pressed" from="InvUI/MarginContainer/NinePatchRect/GridContainer/InvUISlot6" to="." method="_on_inv_ui_slot_6_pressed"]
